src/sass/_header.scss
.header {

  &__nav-bar {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 8rem;
    z-index: 1;
    transition: top .5s ease, background-color .2s linear 0s;
  
    display: flex;
    align-items: center;
    justify-content: flex-end;

    @include respond-to(phone) {
      background-color: $color-primary-dark;
    }

    @include respond-to(no-phone) {
      &--dark {
        background-color: $color-primary-dark;
        transition: top .5s ease, background-color .2s linear 0s;
      }

      &--hidden {
        top: -8rem;
        transition: top .5s ease, background-color .2s linear 0.5s;
      }
    }
  }

  &__logo {
    position: fixed;
    top: 2rem;
    left: 0;
    margin-right: auto;
    padding: 0 3.6rem;
    font-size: 2rem;
    font-weight: 900;
    color: $color-grey-light-1;
    letter-spacing: 2px;
    text-decoration: none;
    transition: transform .3s ease, color .6s ease;

    @include respond-to(tab-port) {
      padding: 0 2rem;
      font-size: 1.8rem;
      top: 2.4rem;
    }

    @include respond-to(no-phone) {
      &--dark {
        color: $color-grey-dark-1;
      }
    }

    &:hover,
    &:active {
      transform: rotate(-5deg) scale(1.3);
    }
  }

  &__image-container {
    position: relative;
    height: 40rem;
    background-color: var(--color-primary-dark);
    background-image: linear-gradient(
      to right bottom, 
      rgba($color-primary-dark, .8),
      rgba($color-primary-light, .8)), 
      url(../img/header-large.jpg);
    background-size: cover;
    background-position: center;

    @include respond-to(phone) {
      height: 20rem;
      margin-top: 8rem;
      background-image: linear-gradient(
      to right bottom, 
      rgba($color-primary-dark, .8),
      rgba($color-primary-light, .8)), 
      url(../img/header.jpg);
    }
  }

  &__button {
    visibility: hidden;
    opacity: 0;
    position: fixed;
    top: 0;
    right: 0;
    width: 4rem;
    height: 4rem;
    background-color: $color-primary-dark; 
    border: 0;
    margin: 2rem 1.8rem 0;
    cursor: pointer;
    transition: background-color .3s ease;

    &--mobile {
      display: none;
    }

    &:hover {
      background-color: $color-primary;
    }

    &--shown {
      visibility: visible;
      opacity: 1;
    }

    &--fixed {
      position: fixed;
      top: 0;
      right: 0;
    }

    @include respond-to(tab-port) {
      margin: 2rem 1rem 0;
    }

    @include respond-to(phone) {
      visibility: visible;
      opacity: 1;
      position: static;
      display: none;

      &--mobile {
        display: block;
        background-color: $color-primary; 

        &:hover {
          background-color: $color-primary-dark; 
        }
      }
    }
  
  }

  &__icon {
    position: relative;
    margin-top: 1.1rem;

    &,
    &::before,
    &::after {
      width: 2rem;
      height: 3px;
      background-color: $color-grey-light-1;
      display: inline-block;
    }

    &::before,
    &::after {
      content: "";
      position: absolute;
      left: 0;
      transition: all .3s;
    }

    &::before { top: -.8rem; }
    &::after { top: .8rem; }

    &--close {
      background-color: transparent;

      &::before {
        top: 0;
        transform: rotate(135deg);
      }

      &::after {
        top: 0;
        transform: rotate(-135deg);
      }

    }
  }
}

